<resources>
    <string name="app_name">Calculator</string>
    <string name="Button_one">1</string>
    <string name="Button_two">2</string>
    <string name="Button_three">3</string>
    <string name="Button_four">4</string>
    <string name="Button_five">5</string>
    <string name="Button_six">6</string>
    <string name="Button_seven">7</string>
    <string name="Button_eight">8</string>
    <string name="Button_nine">9</string>
    <string name="Button_zero">0</string>
    <string name="Button_point">.</string>
    <string name="Button_equal">=</string>
    <string name="Button_plus">+</string>
    <string name="Button_minus">-</string>
    <string name="Button_times">*</string>
    <string name="Button_divide">/</string>
    <string name="boton_delete">C</string>
</resources>