<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_one"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="244dp"
        android:text="@string/Button_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="244dp"
        android:text="@string/Button_two"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="244dp"
        android:text="@string/Button_three"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="5dp"
        android:onClick="clicOperacion"
        android:text="@string/Button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_five"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_six"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintTop_toBottomOf="@+id/button_three" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_seven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:onClick="clicOperacion"
        android:text="@string/Button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_eight"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_nine"
        app:layout_constraintEnd_toStartOf="@+id/button_times"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_times"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:onClick="clicOperacion"
        android:text="@string/Button_times"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_zero"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:text="@string/Button_equal"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:onClick="clicOperacion"
        android:text="@string/Button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_times" />

    <TextView
        android:id="@+id/TextNumber_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:ems="10"
        android:hint="0.0"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextNumber_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="202dp"
        android:layout_marginEnd="20dp"
        android:clickable="true"
        android:ems="10"
        android:hint="0.0"
        android:inputType="number"
        android:minHeight="48dp"
        android:onClick="presionarDigito2"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextNumber_one" />

    <TextView
        android:id="@+id/TextNumber_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:ems="10"
        android:hint="0.0"
        android:inputType="number"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextNumber_two" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="146dp"
        android:layout_marginBottom="2dp"
        android:text="@string/boton_delete"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Mensaje de error"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>